# calc-bench

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml
datasets/: sample.jsonl
scripts/: generate_dataset.py  report_accuracy.py
src/: math_agent.py  openai_client.py
tests/: test_agent_sdk.py  test_integration.py  test_math_agent_integration.py  test_math_agent_unit.py
